--- a/terapeuta/static/css/historial_paciente.css
+++ b/terapeuta/static/css/historial_paciente.css
@@ -508,6 +508,16 @@
     width: 80%;
 }
 
+.no-rutinas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #666;
+}
+
 /* Estilos para menu desplegable de sesiones */
 .contenedor-sesiones {
     width: 100%;
