--- a/terapeuta/templates/historial_paciente.html
+++ b/terapeuta/templates/historial_paciente.html
@@ -54,7 +54,7 @@
       <div class="progreso-paciente-content">
           <h3>PROGRESO DEL PACIENTE</h3>
           <span class="progreso-icono">
-            <i class="fas fa-chart-bar"></i>
+            <i class="fa-solid fa-chart-line"></i>
           </span>
       </div>
     </button>
