Implementación de carga masiva para recepcionistas: se agregó funcionalidad para importar recepcionistas desde archivos CSV, se mejoró el estilo de la interfaz y se implementaron mensajes dinámicos para la carga de archivos.

--- a/administrador/templates/admin_pacientes.html
+++ b/administrador/templates/admin_pacientes.html
@@ -189,7 +189,7 @@
             <p id="dropzone-message">Arrastra tu archivo o haz click para buscar en tu computador</p>
             <input type="file" name="archivo_csv" id="archivo_csv" accept=".csv">
         </div>
-        <a id="plantilla_ejemplo" href="{% url 'archivo_csv_ejemplo' %}">Plantilla CSV de muestra</a>
+        <a id="plantilla_ejemplo" href="{% url 'archivo_csv_ejemplo_pacientes' %}">Plantilla CSV de muestra</a>
         <div class="botones-modal">
             <button id="closePopup" class="boton-cancelar">Cancelar</button>
             <button class="boton-confirmar" id="subir_carga" type="submit">Subir archivo</button>
