--- a/administrador/templates/admin_recepcionistas.html
+++ b/administrador/templates/admin_recepcionistas.html
@@ -171,6 +171,12 @@
 
 {% block extra_js %}
 <script>
+    document.getElementById("boton-agregar-recepcionista").addEventListener("click", function(){
+        window.location.href = "{% url 'agregar_recepcionista' %}";
+    });
+</script>
+
+<script>
     document.addEventListener('DOMContentLoaded', function() {
         const checkboxes = document.querySelectorAll('.recepcionista-checkbox');
         const selectAllCheckbox = document.getElementById('select-all');
@@ -293,4 +299,3 @@
 <script src="{% static 'js/filtroListados.js' %}"></script>
 <script src="{% static 'js/admin_buscador_recepcionista.js' %}"></script>
 {% endblock %}
-
